Implementação de caracteristicas da empresa

--- a/site/index.html
+++ b/site/index.html
@@ -52,6 +52,27 @@
             </div>
         </div>
     </div>
+    <!-- create 3 columns with 1 image and 1 text align center -->
+    <div class="container py-2">
+        <div class="row">
+            <div class="col-12 col-md-4 text-center">
+                <img src="assets/images/icone_produtos.png" class="img-fluid" alt="Sofá" style="max-width: 40%;">
+                <h2 class="mt-3">Produtos</h2>
+                <p>Qualidade reconhecida do material e variedade nos produtos</p>
+            </div>
+            <div class="col-12 col-md-4 text-center">
+                <img src="assets/images/icone_sob_medida.png" class="img-fluid" alt="Mesa" style="max-width: 40%;">
+                <h2 class="mt-3">Sob medida</h2>
+                <p>Serviço personalizado, atendendo a sua necessidade</p>
+            </div>
+            <div class="col-12 col-md-4 text-center">
+                <img src="assets/images/icone_velocidade_entrega.png" class="img-fluid" alt="Cama" style="max-width: 40%;">
+                <h2 class="mt-3">Entrega rápida</h2>
+                <p>Utilizando os melhores recursos para entregas no menor tempo possível</p>
+            </div>
+        </div>
+    </div>
+
     <!-- create float button on page for contact via whatsapp -->
     <a
         href="https://api.whatsapp.com/send?phone=5511987654321"
