--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,9 @@
 
     <!-- Adicione os links para os arquivos CSS do Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    
+    <!-- acrescentar o css produtos da pasta styles -->
+    <link rel="stylesheet" href="styles/produtos.css">
 
     <!-- Adicione os links para as fontes do Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -69,6 +72,75 @@
                 <img src="assets/images/icone_velocidade_entrega.png" class="img-fluid" alt="Cama" style="max-width: 40%;">
                 <h2 class="mt-3">Entrega rápida</h2>
                 <p>Utilizando os melhores recursos para entregas no menor tempo possível</p>
+            </div>
+        </div>
+    </div>
+    <!-- create a section with two columns where first has a title "Nossos Produtos" and a list with products and second has a carousel with many images of products -->
+    <div class="container py-2" id="produtos">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h2 class="text-center mt-2">Nossos Produtos</h2>
+                <!-- create a grid with icon from font awesome and text about items: cadeira, armario, mesa, cozinha, escritorio -->
+                <div class="row my-4">
+                    <div class="col-6 text-center opcaoTipo my-1">
+                        <div class="container">
+                            <i class="fas fa-tv fa-beat fa-2x d-block mx-auto"></i>
+                            <p class="text-center">Sala de Estar</p>
+                        </div>
+                    </div>
+                    <div class="col-6 text-center opcaoTipo my-1">
+                        <div class="container">
+                            <i class="fas fa-bed fa-beat fa-2x d-block mx-auto"></i>
+                            <p class="text-center">Quarto</p>
+                        </div>
+                    </div>
+                    <div class="col-6 text-center opcaoTipo my-1">
+                        <div class="container">
+                            <i class="fas fa-utensils fa-beat fa-2x d-block mx-auto"></i>
+                            <p class="text-center">Sala de Jantar</p>
+                        </div>
+                    </div>
+                    <div class="col-6 text-center opcaoTipo my-1">
+                        <div class="container">
+                            <i class="fas fa-coffee fa-beat fa-2x d-block mx-auto"></i>
+                            <p class="text-center">Cozinha</p>
+                        </div>
+                    </div>
+                    <div class="col-12 text-center opcaoTipo my-1">
+                        <div class="container">
+                            <i class="fas fa-laptop fa-beat fa-2x d-block mx-auto"></i>
+                            <p class="text-center">Escritório</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 d-flex align-items-center">
+                <div id="carouselProdutos" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselProdutos" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselProdutos" data-slide-to="1"></li>
+                        <li data-target="#carouselProdutos" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="assets/images/office/desk_1.jpeg" class="d-block w-100" alt="Sofá 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/office/desk_2.jpeg" class="d-block w-100" alt="Mesa 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="assets/images/office/desk_3.jpeg" class="d-block w-100" alt="Cama 1">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselProdutos" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Anterior</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselProdutos" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Próximo</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
