Melhoria na parte de produtos

--- a/site/index.html
+++ b/site/index.html
@@ -74,31 +74,31 @@
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="living-room">
                             <i class="fas fa-tv fa-pulse fa-2x d-block mx-auto"></i>
-                            <p class="text-center">Sala de Estar</p>
+                            <h6 class="text-center">Sala de Estar</h6>
                         </div>
                     </div>
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="bedroom">
                             <i class="fas fa-bed fa-pulse fa-2x d-block mx-auto"></i>
-                            <p class="text-center">Quarto</p>
+                            <h6 class="text-center">Quarto</h6>
                         </div>
                     </div>
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="dining-room">
                             <i class="fas fa-utensils fa-pulse fa-2x d-block mx-auto"></i>
-                            <p class="text-center">Sala de Jantar</p>
+                            <h6 class="text-center">Sala de Jantar</h6>
                         </div>
                     </div>
                     <div class="col-6 text-center opcaoTipo my-1">
                         <div class="container" data-option="kitchen">
                             <i class="fas fa-coffee fa-pulse fa-2x d-block mx-auto"></i>
-                            <p class="text-center">Cozinha</p>
+                            <h6 class="text-center">Cozinha</h6>
                         </div>
                     </div>
                     <div class="col-12 text-center opcaoTipo my-1">
                         <div class="container" data-option="office">
                             <i class="fas fa-laptop fa-pulse fa-2x d-block mx-auto"></i>
-                            <p class="text-center">Escritório</p>
+                            <h6 class="text-center">Escritório</h6>
                         </div>
                     </div>
                 </div>
