--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,6 @@
     <!-- acrescentar o css produtos da pasta styles -->
     <link rel="stylesheet" href="styles/produtos.css">
     <link rel="stylesheet" href="styles/header.css">
-    
 
     <!-- Adicione os links para as fontes do Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -134,6 +133,24 @@
         </div>
     </div>
 
+    <!-- secao de onde estamos localizados com duas colunas, onde a primeira apresenta os dados com o endereço e o segundo um mapa com a localização do google maps -->
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h2 class="text-center"><i class="fas fa-map-marker-alt" style="color: gray"></i> Onde estamos localizados</h2>
+                <p class="text-center">Rua dos Bobos, nº 0, Bairro da Lapa, São Paulo - SP</p>
+                <p class="text-center">CEP: 00000-000</p>
+                <p class="text-center">Telefone: (11) 1234-5678</p>
+                <p class="text-center">E-mail:
+                    <a href="mailto:saulo.igor.alves@gmail.com">saulo.igor.alves@gmail.com</a>
+                </p>
+            </div>
+            <div class="col-12 col-md-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.073394394073!2d-46.68807368502147!3d-23.55051968467914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5b8b0f3d3d3f%3A0x8e3e3e3e3e3e3e3e!2sRua%20dos%20Bobos%2C%20n%C2%BA%200%20-%20Bairro%20da%20Lapa%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2000000-000!5e0!3m2!1spt-BR!2sbr!4v1601550730003!5m2!1spt-BR!2sbr" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+        </div>
+    </div>
+
     <!-- create float button on page for contact via whatsapp -->
     <a
         href="https://api.whatsapp.com/send?phone=5511987654321"
@@ -142,60 +159,12 @@
         ><i class="fab fa-whatsapp"></i
     ></a>
 
-    <!-- criar um codigo javascript para que quando clicar uma das divs tipoOpcao, a cor de fundo mude para cinza e o texto para branco e as imagens do carousel sejam alteradas para de acordo com as imagens que existem na pasta de acordo com o tipo de opção escolhida -->
-    <script>
-        let opcoes = document.querySelectorAll(".opcaoTipo .container");
-        let carousel = document.querySelector("#carouselProdutos");
-        let imagens = carousel.querySelectorAll("img");
-        let imagensPath = {
-            "bedroom": [
-                "assets/images/bedroom/bedroom_1.jpeg",
-                "assets/images/bedroom/bedroom_2.jpeg",
-                "assets/images/bedroom/bedroom_3.jpeg",
-            ],
-            "kitchen": [
-                "assets/images/kitchen/kitchen_1.jpeg",
-                "assets/images/kitchen/kitchen_2.jpeg",
-                "assets/images/kitchen/kitchen_3.jpeg",
-            ],
-            "office": [
-                "assets/images/office/desk_1.jpeg",
-                "assets/images/office/desk_2.jpeg",
-                "assets/images/office/desk_3.jpeg",
-            ]
-            // Adicione as outras categorias aqui...
-        };
-
-        opcoes.forEach((opcao, index) => {
-            opcao.addEventListener("click", () => {
-                opcoes.forEach((opcao) => {
-                    opcao.style.backgroundColor = "white";
-                    opcao.style.color = "black";
-                });
-                opcao.style.backgroundColor = "lightgray";
-                opcao.style.color = "black";
-                let tipo = opcao.getAttribute("data-option"); // Obtenha o valor do atributo data-option
-                let imagensTipo = imagensPath[tipo]; // Use esse valor para obter as imagens corretas
-                imagens.forEach((imagem, index) => {
-                    imagem.src = imagensTipo[index]; // Atualize o src das imagens
-                });
-            });
-        });
-
-        let btnHeader = document.querySelector("#btnHeader");
-        btnHeader.addEventListener("click", () => {
-            window.scrollTo({
-                top: 800,
-                behavior: "smooth",
-            });
-        });
-
-
-    </script>
-
     <!-- Adicione os scripts do Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- adiciona os scripts da pasta scripts do projeto -->
+    <script src="scripts/produtos.js"></script>
 </body>
 </html>
