arrumando margem de colunas do info

--- a/site/index.html
+++ b/site/index.html
@@ -137,7 +137,7 @@
     <!-- secao de onde estamos localizados com duas colunas, onde a primeira apresenta os dados com o endereço e o segundo um mapa com a localização do google maps -->
     <div class="container py-5">
         <div class="row">
-            <div class="col-12 col-md-6 py-4 text-end d-flex flex-column justify-content-between" id="text-info">
+            <div class="col-12 col-md-6 py-4 text-end d-flex flex-column justify-content-between my-3 my-md-0" id="text-info">
                 <div>
                     <h2><i class="fas fa-map-marker-alt" style="color: gray"></i> Onde estamos localizados</h2>
                     <p class="mt-5 mr-3">Rua dos Bobos, nº 0</p>
