--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/info.css">
     <link rel="stylesheet" href="styles/info-video.css">
+    <link rel="stylesheet" href="styles/parceiros.css">
 
     <!-- Adicione os links para as fontes do Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -66,7 +67,7 @@
         </div>
     </div>
     <!-- create a section with two columns where first has a title "Nossos Produtos" and a list with products and second has a carousel with many images of products -->
-    <div class="container-fluid py-2" id="produtos">
+    <div class="container-fluid py-2" id="produtos" >
         <div class="row">
             <div class="col-12 col-md-6">
                 <h2 class="text-center mt-2">Nossos Produtos</h2>
@@ -136,7 +137,7 @@
     </div>
 
     <!-- secao onde teremos os parceiros da empresa, clientes sendo apresentados de forma dinamica sem utilizar o carousel -->
-    <div class="container py-5">
+    <div class="container-fluid py-5" id="parceiros">
         <h2 class="text-center">Nossos Parceiros</h2>
         <div class="row">
             <div class="col-12 col-md-3 text-center my-3">
@@ -154,50 +155,22 @@
         </div>
     </div>
 
-    <!-- secao onde apresentara o header_video numa coluna e em outra coluna vamos apresentar um checklist de qualidades dos nossos serviços -->
-    <div class="container-fluid py-5" id="publi">
+   <!-- secao com uma coluna com video sobre a empresa e na outra coluna um texto sobre porque contratar nossa empresa -->
+    <div class="container-fluid py-3 text-white" style="background-color: black;">
         <div class="row">
-            <div class="col-12 col-md-6" id="info-video">
-                <video id="header_video" class="img-fluid" autoplay loop muted>
+            <div class="col-12 col-md-6">
+                <video width="100%" height="315" autoplay loop muted>
                     <source src="assets/videos/header_video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
                 </video>
             </div>
             <div class="col-12 col-md-6 d-flex align-items-center">
-                <div class="container">
-                    <h2 class="text-center">Por que escolher a nossa empresa?</h2>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="checkbox1" checked>
-                                <label class="form-check-label" for="checkbox1">Qualidade reconhecida dos produtos</label>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="checkbox2" checked>
-                                <label class="form-check-label" for="checkbox2">Variedade nos produtos</label>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="checkbox3" checked>
-                                <label class="form-check-label" for="checkbox3">Serviço personalizado, atendendo a sua necessidade</label>
-                            </div>
-                        </li>
-                        <li class="list-group-item">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="checkbox4" checked>
-                                <label class="form-check-label" for="checkbox4">Utilizando os melhores recursos para entregas no menor tempo possível</label>
-                            </div>
-                        </li>
-                    </ul>
+                <div>
+                    <h2>Por que contratar a nossa empresa?</h2>
+                    <p class="mt-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 </div>
             </div>
         </div>
     </div>
-
-    
 
     <!-- secao de onde estamos localizados com duas colunas, onde a primeira apresenta os dados com o endereço e o segundo um mapa com a localização do google maps -->
     <div class="container-fluid py-5">
