Correção de alinhamento

--- a/site/index.html
+++ b/site/index.html
@@ -167,7 +167,7 @@
             <div class="col-12 col-md-6 d-flex">
                 <div>
                     <h2>Por que contratar a nossa empresa?</h2>
-                    <div class="row mt-5">
+                    <div class="row mt-5 d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
                             <input type="checkbox" checked/>
                             <svg viewBox="0 0 35.6 35.6">
@@ -178,7 +178,7 @@
                         </div>              
                         <h5 class="ml-2">Preços competitivos</h5>
                     </div>
-                    <div class="row my-2">
+                    <div class="row my-2 d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
                             <input type="checkbox" checked/>
                             <svg viewBox="0 0 35.6 35.6">
@@ -189,7 +189,7 @@
                         </div>              
                         <h5 class="ml-2">Atendimento personalizado</h5>
                     </div>
-                    <div class="row">
+                    <div class="row d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
                             <input type="checkbox" checked/>
                             <svg viewBox="0 0 35.6 35.6">
@@ -200,7 +200,7 @@
                         </div>              
                         <h5 class="ml-2">Experiência no mercado</h5>
                     </div>
-                    <div class="row my-2">
+                    <div class="row my-2 d-flex align-items-center">
                         <div class="checkbox-wrapper-31">
                             <input type="checkbox" checked/>
                             <svg viewBox="0 0 35.6 35.6">
