alterando video para video menor avaliar performance site

--- a/site/index.html
+++ b/site/index.html
@@ -160,8 +160,8 @@
     <div class="container-fluid py-3 text-white" style="background-color: black;">
         <div class="row">
             <div class="col-12 col-md-6">
-                <video width="100%" height="315" autoplay loop muted>
-                    <source src="assets/videos/header_video_completo.mp4" type="video/mp4">
+                <video width="100%" height="315" autoplay loop muted playsinline>
+                    <source src="assets/videos/header_video_completo _720.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="col-12 col-md-6 d-flex">
